<resources>
    <string name="app_name">BMI Analyzer</string>
    <string name="next"><u>Next</u></string>
    <string name="logo_description">Here, there is BMI Logo</string>
    <string name="welcome">Welcome Back</string>
    <string name="having_account">If you already have an account, log in </string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">LOG IN</string>
    <string name="signup_account">You Don\'t Have An Account ?</string>
    <string name="signup">Sign Up</string>

    <string name="new_account">Create New Account</string>
    <string name="not_having_account">If you do not already have an account</string>
    <string name="user_name">Name</string>
    <string name="user_email">E-mail</string>
    <string name="new_password">Password</string>
    <string name="re_password">Re-Password</string>
    <string name="create">CREATE</string>
    <string name="account">You Have An Account ? </string>
    <string name="login_account"> Login</string>
    <string name="complete_info"> Complete Your Information</string>
    <string name="gender"> Gender</string>
    <string name="male"> Male</string>
    <string name="female"> Female</string>
    <string name="weight"> Weight</string>
    <string name="plus"> + </string>
    <string name="minus"> - </string>
    <string name="kg"> kg </string>
    <string name="cm"> cm </string>
    <string name="length"> Length</string>
    <string name="date_OB"> Date Of Birth</string>
    <string name="saving_data"> Save Data</string>
    <string name="new_record"> New Record</string>
    <string name="date"> Date</string>
    <string name="time"> Time</string>
    <string name="add_food"> Add Food Details</string>
    <string name="category"> Category</string>
    <string name="calory"> Calory</string>
    <string name="cal"> cal/g</string>
    <string name="photo"> Photo</string>
    <string name="food_photo_Desc"> Here, there is a photo for food</string>
    <string name="upload_photo"> Upload Photo</string>
    <string name="save"> Save</string>
    <string name="hi"> Hi, Mohammed</string>
    <string name="current_status"> Current Status</string>
    <string name="old_status">Old Status</string>
    <string name="add_food_btn">Add Food</string>
    <string name="add_record">Add Record</string>
    <string name="view_food">View Food</string>
    <string name="logout"><u>Logout</u></string>
    <string name="normal">Normal (still Good)</string>
    <string name="food_list">Food List</string>
    <string name="edit">Edit</string>
    <string name="edit_food">Edit Food Details</string>



</resources>