<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent">
    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"
        />
    <TextView
        android:id="@+id/user"
        android:layout_width="360dp"
        android:layout_height="40dp"
        android:layout_marginTop="80dp"
        android:layout_marginLeft="27dp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:text="@string/hi"
        android:textColor="@color/black"
        android:textSize="22sp" />
    <TextView
        android:id="@+id/currentState"
        android:layout_width="360dp"
        android:layout_height="30dp"
        android:layout_marginTop="120dp"
        android:layout_marginLeft="10dp"
        android:textStyle="bold"
        android:text="@string/current_status"
        android:textColor="@color/blue"
        android:textSize="18sp" />
    <EditText
        android:id="@+id/normal"
        android:layout_width="370dp"
        android:layout_height="wrap_content"
        android:ems="20"
        android:textAlignment="center"
        android:hint="@string/current_status"
        android:inputType="text"
        android:layout_marginTop="150dp"
        android:layout_marginLeft="10dp" />
    <TextView
        android:id="@+id/old_status"
        android:layout_width="360dp"
        android:layout_height="40dp"
        android:layout_marginTop="210dp"
        android:layout_marginLeft="10dp"
        android:textStyle="bold"
        android:text="@string/old_status"
        android:textColor="@color/blue"
        android:textSize="18sp" />
    <androidx.recyclerview.widget.RecyclerView  xmlns:android="http://schemas.android.com/apk/res/android"
        tools:ignore="MissingClass">

        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="400dp"
        android:layout_height="200dp"
        android:orientation="vertical"
        android:layout_marginTop="250dp"
        android:layout_marginLeft="10dp"
        android:background="#1685d8"
        android:id="@+id/home"
        tools:context=".home">

    </androidx.recyclerview.widget.RecyclerView>

    <Button
        android:id="@+id/add_food"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="480dp"
        android:background="@drawable/border"
        android:gravity="center"
        android:text="@string/add_food"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="19sp" />
    <Button
        android:id="@+id/add_record"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="250dp"
        android:layout_marginTop="480dp"
        android:background="@drawable/border"
        android:gravity="center"
        android:text="@string/add_record"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="19sp" />
    <Button
        android:id="@+id/view_food"
        android:layout_width="370dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="550dp"
        android:background="@drawable/border"
        android:gravity="center"
        android:text="@string/view_food"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="19sp" />
    <TextView
        android:id="@+id/text2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="630dp"
        android:layout_marginLeft="190dp"
        android:text="@string/logout"
        android:onClick="text_next"
        android:textColor="@color/black"
        android:textSize="20sp"

        />
</FrameLayout>