<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="@color/white"
    android:layoutDirection="ltr"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_account"
        android:textColor="@color/blue"
        android:textSize="40sp"
        android:textStyle="bold">
    </TextView>

    <TextView
        android:layout_width = "wrap_content"
        android:layout_height = "wrap_content"
        android:text ="@string/not_having_account"
        android:textSize = "20sp"
        android:layout_marginBottom="50dp"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/emailError"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="center">

        <EditText
            android:id="@+id/name"
            android:layout_width="376dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:autofillHints="name"
            android:hint="@string/user_name"
            android:inputType="text"
            android:maxLines="1"
            android:minHeight="48dp"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:singleLine="true"
            tools:ignore="SpeakableTextPresentCheck" />
    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/e_mail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="center">


        <EditText
            android:id="@+id/email"
            android:layout_width="381dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:autofillHints="E-mail"
            android:hint="@string/user_email"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:minHeight="48dp"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:singleLine="true"
            tools:ignore="SpeakableTextPresentCheck" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/Pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="center">


        <EditText
            android:id="@+id/pass"
            android:layout_width="381dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:autofillHints="password"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:minHeight="48dp"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:singleLine="true"
            tools:ignore="SpeakableTextPresentCheck" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/PassError"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="center">


        <EditText
            android:id="@+id/text_input_password_toggle"
            android:layout_width="381dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:autofillHints="password"
            android:hint="@string/re_password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:minHeight="48dp"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:singleLine="true"
            tools:ignore="SpeakableTextPresentCheck" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/create"
        android:layout_width="358dp"
        android:layout_height="61dp"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="45dp"
        android:background="@drawable/rounded_corners"
        android:text="@string/create"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/account"
        android:textColor="@color/black"
        android:textSize="17sp"
        android:layout_marginBottom="150dp">

    </TextView>
</LinearLayout>