<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:layoutDirection="ltr"
    android:orientation="vertical"
    tools:context=".CompleteInfo">

    <include android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingTop="50dp"
        android:text="@string/complete_info"
        android:textColor="@color/blue"
        android:textSize="35sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:layout_marginBottom="50dp">
    </TextView>


    <RadioGroup
        android:layout_width="365dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="30dp"
        android:checkedButton="@id/Male"
        android:orientation="horizontal"
        android:theme="@style/RadioButtonStyle"
        tools:ignore="UselessParent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gender"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="45dp"
            android:textColor="@color/blue"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/Male"
            android:layout_width="84dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="30dp"
            android:buttonTint="@color/blue"
            android:checked="true"
            android:gravity="center"
            android:minHeight="48dp"
            android:text="@string/male"
            android:textColor="@color/blue"
            android:textSize="15sp"
            tools:ignore="TextContrastCheck" />

        <RadioButton
            android:id="@+id/Female"
            android:layout_width="91dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="30dp"
            android:buttonTint="@color/blue"
            android:gravity="center"
            android:minHeight="48dp"
            android:text="@string/female"
            android:textColor="@color/blue"
            android:textSize="15sp"
            tools:ignore="TextContrastCheck" />
    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="30dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/weight"
            android:textColor="@color/blue"
            android:textSize="20sp"
            />

        <LinearLayout
            android:layout_width="109dp"
            android:layout_height="33dp"
            android:layout_weight="1"
            android:background="@drawable/border_style">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/border_style"
                android:text="@string/minus"
                android:textColor="@color/blue"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/weight"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/border_style"
                android:ems="10"
                android:inputType="numberDecimal"
                android:textSize="20sp"
                />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/border_style"
                android:text="@string/plus"
                android:textColor="@color/blue"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/kg"
            android:textColor="@color/blue"
            android:textSize="15sp">
        </TextView>
    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="30dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/length"
            android:textColor="@color/blue"
            android:textSize="20sp"
            />

        <LinearLayout
            android:layout_width="109dp"
            android:layout_height="33dp"
            android:layout_weight="1"
            android:background="@drawable/border_style">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/border_style"
                android:text="@string/minus"
                android:textColor="@color/blue"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/length"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/border_style"
                android:ems="10"
                android:inputType="numberDecimal"
                android:textSize="20sp"
                />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/border_style"
                android:text="@string/plus"
                android:textColor="@color/blue"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/cm"
            android:textColor="@color/blue"
            android:textSize="15sp">
        </TextView>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="30dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/date_OB"
            android:textColor="@color/blue"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/editTextDate"
            android:layout_width="185dp"
            android:layout_height="37dp"
            android:background="@drawable/border_style"
            android:inputType="date" />

    </LinearLayout>


    <Button
        android:id="@+id/saveButton"
        android:layout_width="322dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginStart="10dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="35dp"
        android:background="@drawable/rounded_corners"
        android:text="@string/saving_data"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold" />
</LinearLayout>
