<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:layoutDirection="ltr"
    android:orientation="vertical"
    tools:context=".CompleteInformationActivity">

    <include android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <TextView
        android:layout_width="307dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingTop="50dp"
        android:text="@string/complete_info"
        android:textColor="@color/blue"
        android:textSize="35sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:layout_marginBottom="50dp">
    </TextView>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checkedButton="@id/Male"
        tools:ignore="UselessParent"
        android:orientation="horizontal"
        android:layout_gravity="center">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/gender"
            android:textColor="@color/blue"
            android:textSize="20sp"
            android:paddingStart="5dp"
            android:paddingEnd="50dp"
            />

        <RadioButton
            android:id="@+id/Male"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/male"
            android:textColor="@color/blue"
            android:textSize="15sp"
            android:layout_marginEnd="30dp"/>

        <RadioButton
            android:id="@+id/Female"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/female"
            android:textColor="@color/blue"
            android:textSize="15sp"
            android:layout_marginEnd="10dp"
            />
    </RadioGroup>
    </LinearLayout>


</LinearLayout>